@@ -100,7 +100,7 @@ private:
     int _inUse; // Number of threads that are currently in use.
     double _load; // Current load in number of threads.
 
-    bool _warnUdp;
+    const bool _warnUdp;
 
     IceUtil::Mutex _promoteMutex;
 };
