@@ -1,6 +1,9 @@
 Changes since version 1.1.1
 ---------------------------
 
+- Bi-directional connections are now handled by the client-side thread
+  pool instead of the server-side thread pool.
+
 - Fixed a bug in the generated code that caused "at-most-once"
   semantics to be ignored for collocated invocations.
 
